# RustyPrefetch

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: DecodePrefetch.rs  DecompressPrefetch.rs  Test.rs
python/: Cargo.toml  README.md  setup.py
python/examples/: PrefetchParser.py
python/src/: lib.rs  pyrpf.rs
python/tests/: pytest.py
src/: lib.rs  main.rs
src/librp/: compression.rs  errors.rs  fileinfo.rs  filestrings.rs  metrics.rs  mod.rs  prefetch.rs  timestamp.rs  tracechain.rs  utils.rs  volume.rs
tests/: fileinfo_tests.rs  metrics_tests.rs  tracechain_tests.rs
