[package]
name = "RustyPrefetch"
version = "0.0.0"
authors = ["matthew seyer <matthew.seyer@gmail.com>"]
build = "build.rs"

[lib]
name = "rustyprefetch"
crate-type = ["cdylib","lib"]

[dependencies]
libc = "0.2"
clap = "*"
byteorder = "*"
encoding = "0.2"
time = "*"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"

[dependencies.chrono]
version = "*"
features = ["serde", "rustc-serialize"]
