[package]
name = "RustyPrefetch"
version = "0.0.0"
authors = ["matthew seyer <https://github.com/forensicmatt/RustyPrefetch>"]
build = "build.rs"

[lib]
name = "rustyprefetch"
crate-type = ["cdylib","lib"]

[dependencies]
log = "0.3"
libc = "0.2"
clap = "*"
byteorder = "*"
encoding = "0.2"
time = "*"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
seek_bufread = "~1.2"

[dependencies.chrono]
version = "*"
features = ["serde", "rustc-serialize"]
